# Aurum_Stocks

Aurum_Stocks_Project/: .env.example  .gitignore  FINAL_PROJECT_TREE.md  IMPLEMENTATION_ROADMAP.md  NEXT_STEP.md  PROJECT_INVENTORY.md  README.md  pyproject.toml  run_tests.sh
Aurum_Stocks_Project/docs/: DOCUMENTATION_INDEX.md
Aurum_Stocks_Project/docs/Architecture/: ARCHITECTURE_OVERVIEW.md  ARCHITECTURE_REVIEW.md  DEPENDENCY_MAP.md
Aurum_Stocks_Project/docs/Implementation/: ADR-0001-collection-layer.md  COLLECTION_LAYER_ARCHITECTURE.md  MARKET_DATA_VALIDATION_PROVENANCE.md
Aurum_Stocks_Project/docs/Operator/: CALIBRATION_RUNBOOK.md  DEPLOYMENT_GUIDE.md  OPERATOR_EXECUTION_GUIDE.md  SIP_SETUP_GUIDE.md
Aurum_Stocks_Project/docs/Reference/: FINAL_REPOSITORY_AUDIT.md  GATE_STATE.md  INTEGRITY_SUITE.md  LABEL_SYSTEM.md  MIGRATION_INVENTORY.md  PROJECT_STATUS.md  PROJECT_TREE.md  REGISTRY_REFERENCE.md  ROADMAP.md  SYSTEM_STATE_LOCK.md
Aurum_Stocks_Project/docs/Research/: RESEARCH_EVENT_KNOWLEDGE.md  RESEARCH_EVENT_RECONSTRUCTION.md  RESEARCH_PLATFORM_GUIDE.md
Aurum_Stocks_Project/ops/: README.md  run_lbl_calibration.py  verify_lbl_freeze.py
Aurum_Stocks_Project/pipeline/: __init__.py  run_collection.py  run_mdvpl.py
Aurum_Stocks_Project/pipeline/collection/: __init__.py  candidate_source.py  collector.py  keys.py  manifest.py  rejections.py  sink.py  sources.py  wiring.py
Aurum_Stocks_Project/research/: __init__.py  demo.py  run_audit.py  run_explorer.py  run_inspector.py  run_knowledge.py  run_reconstruct.py
Aurum_Stocks_Project/tests/: conftest.py
(+76 files in other folders)
