[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aurum-stocks"
version = "0.2.0"
description = "US small-cap, long-only, intraday quant edge-discovery substrate (Phase 1)."
requires-python = ">=3.11"
dependencies = ["pandas", "numpy"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
